deployment/built-assets/apps_v1_deployment_liberty-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liberty-rest
    app.kubernetes.io/part-of: liberty
  name: liberty-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liberty-rest
  template:
    metadata:
      annotations: null
      labels:
        app: liberty-rest
    spec:
      containers:
      - env: null
        image: default-route-openshift-image-registry.apps.cluster-fd65.fd65.sandbox205.opentlc.com/liberty-rest/liberty-rest-app:latest
        imagePullPolicy: Always
        name: liberty-rest
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
