deployment/built-assets/v1_service_liberty-rest.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liberty-rest
  name: liberty-rest
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: liberty-rest
