deployment/built-assets/built-config.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: liberty-rest
  name: liberty-rest
spec:
  ports:
  - name: http
    port: 9080
  selector:
    app: liberty-rest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: liberty-rest
    app.kubernetes.io/part-of: liberty
  name: liberty-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: liberty-rest
  template:
    metadata:
      annotations: null
      labels:
        app: liberty-rest
    spec:
      containers:
      - env: null
        image: default-route-openshift-image-registry.apps.cluster-fd65.fd65.sandbox205.opentlc.com/liberty-rest/liberty-rest-app:latest
        imagePullPolicy: Always
        name: liberty-rest
        ports:
        - containerPort: 9080
          name: http
          protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: liberty-rest
  name: liberty-rest-route
spec:
  to:
    kind: Service
    name: liberty-rest
