deployment/built-assets/route.openshift.io_v1_route_liberty-rest-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: liberty-rest
  name: liberty-rest-route
spec:
  to:
    kind: Service
    name: liberty-rest
